Fixing z-index of top colour band

--- a/themes/gameful/static/css/style.css
+++ b/themes/gameful/static/css/style.css
@@ -46,6 +46,7 @@ body:before {
         height: 8rem;
         width: 100%;
         position: fixed;
+        z-index: 3;
     }
 }
 
@@ -304,7 +305,7 @@ ul {
         width: 3rem;
         height: 3rem;
     }
-
+netfl
     .header__menu-button .open { display: block; }
     .header__menu-button.active .open { display: none; }
     .header__menu-button .close { display: none; }
